--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,10 +7,10 @@ repos:
           - id: trailing-whitespace
           - id: detect-private-key
           - id: requirements-txt-fixer
-    - repo: https://github.com/pre-commit/mirrors-csslint
-      rev: v1.0.5
-      hooks:
-          - id: csslint
+#     - repo: https://github.com/pre-commit/mirrors-csslint
+#       rev: v1.0.5
+#       hooks:
+#           - id: csslint
     - repo: https://github.com/pre-commit/mirrors-fixmyjs
       rev: v2.0.0
       hooks:
