--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,16 @@
 {
-  "cSpell.words": [
-    "AIML",
-    "Bocconi",
-    "DSBA",
-    "Matplotlib",
-    "Scikit",
-    "Stata",
-    "Streamlit"
-  ],
-  "python.testing.pytestArgs": ["tests"],
-  "python.testing.unittestEnabled": false,
-  "python.testing.pytestEnabled": true
+    "cSpell.words": [
+        "AIML",
+        "Bocconi",
+        "DSBA",
+        "Matplotlib",
+        "MLOPS",
+        "Scikit",
+        "Stata",
+        "Streamlit"
+    ],
+    "python.testing.pytestArgs": ["tests"],
+    "python.testing.unittestEnabled": false,
+    "python.testing.pytestEnabled": true,
+    "liveServer.settings.port": 5501
 }
